# tebis

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  SGX_README.md  Setup.md  cluster_test.sh  ycsb-tcp-instances.sh
YCSB-CXX/: CMakeLists.txt  README  build_config.mk  execution_plan_e  execution_plan_e_load  set_operations.py  start_client.sh
YCSB-CXX/core/: Measurements.hpp  client.h
YCSB-CXX/db/: Makefile.old  berkeley_db.h  db_factory.h  db_factory_async_tebis.cc  db_factory_berkeleydb.cc  db_factory_blocking_tebis.cc  db_factory_eutropiadb.cc  db_factory_kyotodb.cc  db_factory_leveldb.cc  db_factory_nulldb.cc  db_factory_perconaft.cc  db_factory_rocksdb.cc  db_factory_tcpdb.cc  db_factory_tebis.cc  db_factory_tucanaclientdb.cc  eutropia_db.h  kreonR_async_client.h  kreonR_blocking_client.h  kyoto_db.h  level_db.h  null_db.h  percona_ft.h  rocks_db.h  tcp_db.cc  tcp_db.hpp  tebis_async_client.h  tebis_blocking_client.h  workload_gen.h
YCSB-CXX/driver/: ycsbc.cc
YCSB-CXX/workloads/: workloade  workloade_load
archive/: throughput_bench.c
benches/: hosts  hosts_replication_3  measure_network_traffic.py  regions_32_replication_2_4_servers  regions_32_replication_3_3_servers  regions_32_replication_3_6_servers  regions_32_servers_4_no_replication
benches/clients/: barrier.sh  extract-data.sh  extract_data.py  get_servers_amplification.py  get_throughput.py  get_total_volume.sh  measure_network_traffic.py  start_ycsb_clients.sh  start_ycsb_clients_2.sh
benches/tcp_ip_clients/: set_operations.py  start_tcp_clients.sh  start_ycsb_tcp_client.sh  stop_statistics.sh
cmake_utils/: ycsb.cmake.in
common/: common.c  common.h
dockers/: README.md  build-images.sh  deploy.sh  exec_tebis.sh  remove_sources.sh  tebis-deployment.yaml  tebis-service-2.yaml  tebis-service.yaml  zookeeper-data-pv.yaml  zookeeper-data-pvc.yaml  zookeeper-datalog-pv.yaml  zookeeper-datalog-pvc.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
kreon_lib/: CMakeLists.txt
kreon_lib/allocator/: allocator.c  allocator.h  mkfs_Eutropia.c  persistent_operations.c
kreon_lib/archive/: delete.h  recovery.c
kreon_lib/btree/: asyncio.c  asyncio.h  btree.c  btree.h  compaction_daemon.c  conf.h  delete.c  gc.c  gc.h  segment_allocator.c  segment_allocator.h
kreon_lib/scanner/: min_max_heap.c  min_max_heap.h  scanner.c  scanner.h
kreon_rdma/: CMakeLists.txt  memory_region_pool.c  memory_region_pool.h  rdma.c  rdma.h
kreon_rdma_client/: client_utils.c  client_utils.h  kreon_rdma_client.c  kreon_rdma_client.h  msg_factory.c  msg_factory.h
kreon_server/: CMakeLists.txt  build_index.c  build_index.h  conf.h  create_region  create_region.c  create_server_node  create_server_node.c  deserialize_index.c  djb2.c  djb2.h  get_clock.h  globals.c  globals.h  list.c  list.h  messages.c  messages.h  metadata.h  metadata_server.c  modulos  rdma_buffer_iterator.h  remote_compaction.c  replica_utilities.c  server.c  server_communication.c  stats.c  stats.h  uthash.h  zk_utils.c
microbenchmarks/: CMakeLists.txt  throughput_bench.c
scripts/: commit-msg-lint.py  verify-installed-files.py
ssh_deploy/: calc_avg_cpu.sh  calc_net_IO.py  calc_net_IO.sh  calc_nvme_IO.sh  calc_nvme_avg_queue.sh  deploy_servers.sh  disable_cores.sh  dump_net_counters.sh  dump_nvme_counters.sh  max_freq.sh  monitor_cpu.sh  monitor_daemon_start.sh  monitor_daemon_stop.sh  monitor_infra_start.sh  monitor_infra_stop.sh  monitor_nvme_queue_depth.sh
tcp_client/: CMakeLists.txt  client.c  tcp_client.c  tcp_client.h  tebis_tcp_errors.h  tebis_tcp_types.h
tcp_server/: CMakeLists.txt  README.md  enc.c  enclave.conf  options.yml  plog.c  plog.h  server.c  server_handle.c  server_handle.h  tcp_server.c  tcp_server.h  tebis_tcp_errors.h  tebis_tcp_types.h  tiresias.c
tcp_server_io_uring/: CMakeLists.txt  io_uring_helpers.c  server.c  tcp_server.c  tcp_server.h  tcp_uring.h  tebis_tcp_errors.h  tebis_tcp_types.h
tebis_rdma/: CMakeLists.txt  get_clock.h  memory_region_pool.c  memory_region_pool.h  rdma.c  rdma.h
tebis_rdma_client/: client_utils.c  client_utils.h  msg_factory.c  msg_factory.h  tebis_rdma_client.c  tebis_rdma_client.h
tebis_server/: CMakeLists.txt  conf.h  configurables.h  create_region.c  create_server_node.c  data_region.h  deserialize_index.c  globals.c  globals.h  hash.c  list.h  mailbox.h  master.c  messages.c  messages.h  metadata.h  metadata_server.c  modulos.sh  multi_get.c  multi_get.h  parser.c  parser.h  rdma_buffer_iterator.c  region.c  region.h  region_desc.c  region_desc.h  region_log.c  region_log.h  region_reconfiguration.c  region_reconfiguration.h  region_server..c  region_server.c  region_server.h  remote_compaction.c  request.h  request_factory.c  request_factory.h  server.c  server_communication.c  (+7 more)
tebis_server/build_index/: build_index.c  build_index.h  build_index_callbacks.c  build_index_callbacks.h
tebis_server/master/: command.c  command.h  master.c  mregion.c  mregion.h  mregion_server.c  mregion_server.h  region.c  region.h  region_log.c  region_log.h
tebis_server/rdma_buffer_iterator/: rdma_buffer_iterator.c  rdma_buffer_iterator.h
tebis_server/send_index/: send_index.c  send_index.h  send_index_callbacks.c  send_index_callbacks.h  send_index_reply_checker.c  send_index_reply_checker.h  send_index_rewriter.c  send_index_rewriter.h  send_index_segment_iterator.c  send_index_segment_iterator.h  send_index_uuid_checker.h
tebis_server/send_index/send_index_uuid_checker/: send_index_uuid_checker.c  send_index_uuid_checker.h
tests/: CMakeLists.txt  allocator_test.c  kadmos.c  test_allocator.c  test_async_api.c  test_circular_buffer.c  test_deletes.c  test_dirty_scans.c  test_krc_api.c  test_scans.c  test_spills.c
utilities/: CMakeLists.txt  asyncio.c  asyncio.h  circular_buffer.c  circular_buffer.h  list.c  list.h  macros.h  min_heap.c  min_heap.h  queue.c  queue.h  rbtree.c  rbtree.h  simple_concurrent_list.c  simple_concurrent_list.h  spin_loop.c  spin_loop.h  stack.c  stack.h  work_stealing_queue.c  work_stealing_queue.h
(+58 files in other folders)
